# spyglass-sdk

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
examples/: README.md  basic_gemini_example.py  gemini_mcp_example.py  gemini_rag_example.py
spyglass/: pyproject.toml
spyglass-ai/: otel.py
spyglass/src/spyglass/: __init__.py
src/: __init__.py  openai.py  trace.py
src/spyglass_ai/: __init__.py  langchain_azure.py  langchain_google_vertexai.py  mcp_tools.py  openai.py  otel.py  trace.py
tests/: test_integration.py  test_langchain_aws.py  test_langchain_azure.py  test_langchain_google_vertexai.py  test_langchain_openai.py  test_mcp_tools.py  test_openai.py  test_otel.py  test_trace.py
