[project]
name = "spyglass"
version = "0.1.0"
description = "A client library for shipping telemetry to the Spyglass AI platform"
readme = "README.md"
authors = [
    { name = "Spyglass AI Team", email = "team@spyglass-ai.com" }
]
requires-python = ">=3.9"
dependencies = [
    "opentelemetry-api>=1.33.1",
    "opentelemetry-sdk>=1.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
